--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "workerpool",
   "version": "0.0.1",
   "description": "Offload tasks to a pool of workers on node.js and in the browser",
+  "homepage": "https://github.com/josdejong/workerpool",
   "author": "Jos de Jong <wjosdejong@gmail.com> (https://github.com/josdejong)",
   "repository": {
     "type": "git",
@@ -12,5 +13,17 @@
     "web worker",
     "cluster",
     "pool"
-  ]
+  ],
+  "main": "./index.js",
+  "scripts": {
+    "test": "mocha test --recursive",
+    "coverage": "istanbul cover _mocha -- test --recursive; echo \"\nCoverage report is available at ./coverage/lcov-report/index.html\""
+  },
+  "dependencies": {
+    "bluebird": "^1.2.4"
+  },
+  "devDependencies": {
+    "istanbul": "^0.2.8",
+    "mocha": "^1.18.2"
+  }
 }
