--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
   ],
   "main": "./index.js",
   "scripts": {
-    "test": "mocha test --recursive",
-    "coverage": "istanbul cover _mocha -- test --recursive; echo \"\nCoverage report is available at ./coverage/lcov-report/index.html\""
+    "build": "gulp",
+    "watch": "gulp watch",
+    "test": "mocha test",
+    "coverage": "istanbul cover _mocha -- test; echo \"\nCoverage report is available at ./coverage/lcov-report/index.html\""
   },
   "dependencies": {
     "bluebird": "^1.2.4"
   },
   "devDependencies": {
+    "gulp": "^3.6.2",
+    "gulp-util": "^2.2.14",
     "istanbul": "^0.2.8",
-    "mocha": "^1.18.2"
+    "mocha": "^1.18.2",
+    "uglify-js": "^2.4.13",
+    "webpack": "^1.1.8"
   }
 }
