--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ coverage
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
+gulpfile.js
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
