Added an async example. Renamed some examples. Fixed a typo in one of the examples.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "coverage": "istanbul cover _mocha -- test; echo \"\nCoverage report is available at ./coverage/lcov-report/index.html\""
   },
   "dependencies": {
+    "promise": "^5.0.0"
   },
   "devDependencies": {
     "gulp": "^3.6.2",
