--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "workerpool",
+  "license": " Apache-2.0",
   "version": "2.3.1",
   "description": "Offload tasks to a pool of workers on node.js and in the browser",
   "homepage": "https://github.com/josdejong/workerpool",
