[BUGFIX] nodeWorker: auto now can actually choose WorkerThreads

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "gulp",
     "watch": "gulp watch",
     "test": "mocha test --timeout 10000",
+    "test:debug": "mocha debug test --timeout 10000",
     "coverage": "istanbul cover _mocha -- test; echo \"\nCoverage report is available at ./coverage/lcov-report/index.html\"",
     "prepublishOnly": "npm run build && npm run test"
   },
