--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
-    "object-assign": "4.1.1"
+    "@babel/core": "^7.3.4",
+    "object-assign": "4.1.1",
+    "rsvp": "^4.8.4"
   }
 }
