--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "prepublishOnly": "npm run build && npm run test"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-util": "^3.0.7",
+    "date-format": "2.0.0",
+    "fancy-log": "1.3.3",
+    "gulp": "4.0.2",
     "istanbul": "^0.4.4",
     "mocha": "^2.5.3",
     "uglify-js": "2.8.29",
