--- a/package.json
+++ b/package.json
@@ -29,14 +29,12 @@
     "date-format": "2.0.0",
     "fancy-log": "1.3.3",
     "gulp": "4.0.2",
-    "istanbul": "^0.4.4",
+    "istanbul": "0.4.5",
     "mocha": "^2.5.3",
     "uglify-js": "2.8.29",
     "webpack": "^1.13.1"
   },
   "dependencies": {
-    "@babel/core": "^7.3.4",
-    "object-assign": "4.1.1",
-    "rsvp": "^4.8.4"
+    "object-assign": "4.1.1"
   }
 }
