--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "fancy-log": "1.3.3",
     "gulp": "4.0.2",
     "istanbul": "0.4.5",
-    "mocha": "^2.5.3",
+    "mocha": "6.1.4",
     "uglify-js": "2.8.29",
     "webpack": "^1.13.1"
   },
