--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "date-format": "2.1.0",
     "fancy-log": "1.3.3",
+    "find-process": "1.4.2",
     "gulp": "4.0.2",
     "istanbul": "0.4.5",
     "mocha": "6.2.0",
