--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "workerpool",
   "license": "Apache-2.0",
-  "version": "3.1.2",
+  "version": "4.0.0",
   "description": "Offload tasks to a pool of workers on node.js and in the browser",
   "homepage": "https://github.com/josdejong/workerpool",
   "author": "Jos de Jong <wjosdejong@gmail.com> (https://github.com/josdejong)",
@@ -16,7 +16,7 @@
     "pool",
     "isomorphic"
   ],
-  "main": "./index.js",
+  "main": "dist/workerpool.js",
   "scripts": {
     "build": "gulp",
     "watch": "gulp watch",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "date-format": "2.1.0",
+    "del": "5.0.0",
     "fancy-log": "1.3.3",
     "gulp": "4.0.2",
     "istanbul": "0.4.5",
