Make Webpack bundle working in node.js

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "scripts": {
     "build": "gulp",
     "watch": "gulp watch",
-    "test": "mocha test --timeout 10000",
-    "test:debug": "mocha debug test --timeout 10000",
-    "coverage": "istanbul cover _mocha -- test; echo \"\nCoverage report is available at ./coverage/lcov-report/index.html\"",
-    "prepublishOnly": "npm run build && npm run test"
+    "test": "npm run build && mocha test --timeout 10000",
+    "test:debug": "npm run build && mocha debug test --timeout 10000",
+    "coverage": "npm run build && istanbul cover _mocha -- test; echo \"\nCoverage report is available at ./coverage/lcov-report/index.html\"",
+    "prepublishOnly": "npm run test"
   },
   "devDependencies": {
     "date-format": "2.1.0",
