Moved source code from `lib` to `src`

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pool",
     "isomorphic"
   ],
-  "main": "dist/workerpool.js",
+  "main": "dist/workerpool.min.js",
   "scripts": {
     "build": "gulp",
     "watch": "gulp watch",
