--- a/package.json
+++ b/package.json
@@ -44,7 +44,5 @@
     "uglify-js": "3.6.0",
     "webpack": "4.39.2"
   },
-  "dependencies": {
-    "object-assign": "4.1.1"
-  }
+  "dependencies": {}
 }
