--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "fancy-log": "1.3.3",
     "find-process": "1.4.3",
     "gulp": "4.0.2",
+    "handlebars": "4.7.6",
     "istanbul": "0.4.5",
-    "mocha": "7.1.1",
+    "mocha": "7.1.2",
     "uglify-js": "3.9.1",
-    "webpack": "4.42.1",
-    "handlebars": "4.7.6"
+    "webpack": "4.43.0"
   },
   "dependencies": {}
 }
