refactor: use Fast list
Signed-off-by: wangkailang <kailang@xsky.com>

--- a/package.json
+++ b/package.json
@@ -45,5 +45,7 @@
     "uglify-js": "3.11.1",
     "webpack": "4.44.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "fast-list": "^1.0.3"
+  }
 }
