--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "prepublishOnly": "npm run test"
   },
   "devDependencies": {
+    "@babel/core": "7.12.10",
+    "@babel/preset-env": "7.12.11",
+    "babel-loader": "8.2.2",
     "date-format": "3.0.0",
     "del": "6.0.0",
     "fancy-log": "1.3.3",
