--- a/package.json
+++ b/package.json
@@ -45,7 +45,5 @@
     "uglify-js": "3.11.1",
     "webpack": "4.44.2"
   },
-  "dependencies": {
-    "fast-list": "^1.0.3"
-  }
+  "dependencies": {}
 }
