add node 12 14 and 16 to test matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ jobs:
             install-command: npm ci
           - node-version: 10.x
             install-command: npm ci
+          - node-version: 12.x
+            install-command: npm ci
+          - node-version: 14.x
+            install-command: npm ci
+          - node-version: 16.x
+            install-command: npm ci
 
     steps:
       - uses: actions/checkout@v2
