--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pool",
     "isomorphic"
   ],
-  "main": "src/index.js",
+  "main": "dist/workerpool.js",
   "browser": "dist/workerpool.js",
   "files": [
     "dist",
@@ -26,8 +26,8 @@
     "README.md"
   ],
   "scripts": {
-    "build": "gulp",
-    "watch": "gulp watch",
+    "build": "rollup -c rollup.config.mjs",
+    "watch": "rollup -c rollup.config.mjs -w",
     "test": "npm run build && mocha test",
     "test:debug": "npm run build && mocha debug test",
     "coverage": "npm run build && c8 mocha && c8 report --reporter=html && echo Coverage report is available at ./coverage/index.html",
@@ -36,16 +36,16 @@
   "devDependencies": {
     "@babel/core": "7.23.0",
     "@babel/preset-env": "7.22.20",
-    "babel-loader": "9.1.3",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "c8": "8.0.1",
     "date-format": "4.0.14",
-    "del": "6.1.1",
-    "fancy-log": "2.0.0",
+    "fs-extra": "^11.1.1",
     "find-process": "1.4.7",
-    "gulp": "4.0.2",
-    "handlebars": "4.7.8",
     "mocha": "10.2.0",
-    "uglify-js": "3.17.4",
-    "webpack": "5.88.2"
+    "rollup": "^4.1.4"
   }
 }
