fix: change main to src/index.js

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pool",
     "isomorphic"
   ],
-  "main": "dist/workerpool.js",
+  "main": "src/index.js",
   "browser": "dist/workerpool.js",
   "files": [
     "dist",
