--- a/package.json
+++ b/package.json
@@ -34,18 +34,18 @@
     "prepublishOnly": "npm run test"
   },
   "devDependencies": {
-    "@babel/core": "7.23.0",
-    "@babel/preset-env": "7.22.20",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.1",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-terser": "^0.4.4",
+    "@babel/core": "7.23.2",
+    "@babel/preset-env": "7.23.2",
+    "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-commonjs": "25.0.7",
+    "@rollup/plugin-json": "6.0.1",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-terser": "0.4.4",
     "c8": "8.0.1",
     "date-format": "4.0.14",
-    "fs-extra": "^11.1.1",
+    "fs-extra": "11.1.1",
     "find-process": "1.4.7",
     "mocha": "10.2.0",
-    "rollup": "^4.1.4"
+    "rollup": "4.1.4"
   }
 }
