Generate types from JSDoc comments with TypeScript compiler. (#415)
* Generate types from JSDoc comments with TypeScript compiler.

* minor edit

* - Use import('child_process').ForkOptions and import('worker_threads').WorkerOptions
- Remove the WorkerOptions definition, which is already defined by default.

* Change to private

* Fix types

* Add tests for type generation.

* Edit a test

* Tweak the way of exporting Promise to make the generated types compatible with @types/workerpool.

* minor edit

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "main": "src/index.js",
   "browser": "dist/workerpool.js",
+  "types": "types/index.d.ts",
   "files": [
     "dist",
     "src",
@@ -26,14 +27,17 @@
     "README.md"
   ],
   "scripts": {
-    "build": "rollup -c rollup.config.mjs",
+    "build": "rollup -c rollup.config.mjs && npm run build:types",
+    "build:types": "tsc -p .",
     "watch": "rollup -c rollup.config.mjs -w",
-    "test": "npm run build && mocha test",
+    "test": "npm run build && mocha test && npm run test:types",
+    "test:types": "tsc -p test/types",
     "test:debug": "npm run build && mocha debug test",
     "coverage": "npm run build && c8 mocha && c8 report --reporter=html && echo Coverage report is available at ./coverage/index.html",
     "prepublishOnly": "npm run test"
   },
   "devDependencies": {
+    "@types/node": "20.10.4",
     "@babel/core": "7.23.5",
     "@babel/preset-env": "7.23.5",
     "@rollup/plugin-babel": "6.0.4",
@@ -46,6 +50,7 @@
     "fs-extra": "11.2.0",
     "find-process": "1.4.7",
     "mocha": "10.2.0",
-    "rollup": "4.6.1"
+    "rollup": "4.6.1",
+    "typescript": "5.3.3"
   }
 }
