--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "lib": [
-      "ES2020", "DOM"
+      "ES2020", "WebWorker"
     ],
     "target": "ES2020",
     "allowJs": true,
