--- a/examples/webpack5/package.json
+++ b/examples/webpack5/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.config.cjs --mode=production"
   },
   "dependencies": {
-    "solid-js": "^1.8.7"
+    "solid-js": "^1.8.7",
+    "workerpool": "file:../../workerpool-9.99.0.tgz"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
