--- a/examples/webpack5/package.json
+++ b/examples/webpack5/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "solid-js": "^1.8.7",
-    "workerpool": "8.0.0"
+    "workerpool": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
