--- a/examples/webpack5/.babelrc
+++ b/examples/webpack5/.babelrc
@@ -1,11 +1,7 @@
 {
-    "presets": [
-        "@babel/preset-env",
-        "@babel/preset-typescript",
-        "babel-preset-solid"
-    ],
-    "plugins": [
-        "@babel/plugin-proposal-object-rest-spread",
-        "@babel/plugin-proposal-class-properties"
-    ]
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-typescript",
+    "@babel/preset-react"
+  ]
 }
